# terracedb

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  README.md
crates/terracedb-bricks/: Cargo.toml
crates/terracedb-bricks/src/: activity.rs  catalog.rs  collection.rs  error.rs  ids.rs  lib.rs  store.rs  tables.rs
crates/terracedb-bricks/tests/: contracts.rs  crash_faults.rs  lifecycle.rs  simulation.rs  store_contracts.rs
crates/terracedb-capabilities/: Cargo.toml
crates/terracedb-capabilities/src/: lib.rs
crates/terracedb-capabilities/tests/: contracts.rs  simulation.rs
crates/terracedb-debezium/: Cargo.toml
crates/terracedb-debezium/src/: lib.rs
crates/terracedb-debezium/tests/: contracts.rs  simulation.rs
crates/terracedb-fuzz/: Cargo.toml  README.md
crates/terracedb-fuzz/src/: artifacts.rs  campaign.rs  db.rs  invariants.rs  lib.rs  minimizer.rs  retention.rs  vfs.rs
crates/terracedb-fuzz/tests/: public_api.rs
crates/terracedb-git/: Cargo.toml
crates/terracedb-git-github/: Cargo.toml
crates/terracedb-git-github/src/: lib.rs
crates/terracedb-git/src/: adapters.rs  bridge.rs  error.rs  host.rs  index.rs  lib.rs  object.rs  refs.rs  store.rs  types.rs  worktree.rs
crates/terracedb-git/tests/: contracts.rs  simulation.rs
crates/terracedb-http/: Cargo.toml  README.md
crates/terracedb-http/src/: lib.rs
crates/terracedb-http/tests/: simulation.rs
crates/terracedb-js/: Cargo.toml  README.md
crates/terracedb-js/src/: adapters.rs  boa.rs  boa_runtime.rs  compat.rs  entropy.rs  error.rs  host.rs  lib.rs  loader.rs  runtime.rs  scheduler.rs  time.rs  types.rs
crates/terracedb-js/tests/: contracts.rs
crates/terracedb-kafka/: Cargo.toml
crates/terracedb-kafka/src/: lib.rs
crates/terracedb-kafka/tests/: contracts.rs  simulation.rs
crates/terracedb-mcp/: Cargo.toml
crates/terracedb-mcp/src/: lib.rs
crates/terracedb-mcp/tests/: adapter.rs  auth.rs
crates/terracedb-otel/: Cargo.toml
crates/terracedb-otel/examples/: local_otlp_smoke.rs
crates/terracedb-otel/src/: lib.rs
crates/terracedb-otel/tests/: telemetry.rs
crates/terracedb-projections/: Cargo.toml
crates/terracedb-projections/src/: failpoints.rs  lib.rs
crates/terracedb-projections/tests/: multi_source.rs  ranked_materialization.rs  simulation.rs  single_source.rs  visibility_indexes.rs
crates/terracedb-records/: Cargo.toml
crates/terracedb-records/src/: lib.rs
crates/terracedb-records/tests/: records.rs
crates/terracedb-sandbox/: Cargo.toml  README.md
crates/terracedb-sandbox/sdk/: package-lock.json  package.json  tsconfig.json  workflow.d.ts  workflow.js
crates/terracedb-sandbox/src/: base_layers.rs  bash.rs  capabilities.rs  disk.rs  error.rs  fs.rs  git.rs  harness.rs  lib.rs  loader.rs  node_compat_bootstrap.js  node_internal_bootstrap_realm.js  node_os_module.js  node_path_module.js  packages.rs  pr.rs  routing.rs  runtime.rs  session.rs  types.rs  typescript.rs  typescript_runner.js  view.rs  workflow_sdk.rs
crates/terracedb-sandbox/tests/: base_layers.rs  contracts.rs  crash_faults.rs  cross_cutting.rs  disk_git.rs  execution.rs  generated_node_upstream_common_subset.rs  hoist_performance.rs  js_object_spread_parity.rs  lifecycle.rs  make_fetch_happen_contract.rs  minipass_fetch_body_response_contract.rs  minipass_fetch_headers_contract.rs  minipass_fetch_index_contract.rs  minipass_fetch_request_contract.rs  node_arborist_mixins.rs  node_arborist_reify.rs  node_bootstrap_realm_contract.rs  node_child_process_api.rs  node_child_process_exec.rs  node_child_process_spawn.rs  node_cjs_mixin_repro.rs  node_cjs_resolution.rs  node_compat_simulation.rs  node_compat_stubs.rs  node_crypto_api.rs  node_crypto_hash.rs  node_crypto_kdf.rs  node_crypto_random.rs  node_dns_api.rs  node_dns_lookup_contract.rs  node_esm_loader.rs  node_esm_require_cache_contract.rs  node_events_api.rs  node_fs_api.rs  node_fs_mkdtemp_contract.rs  node_fs_open_flags_contract.rs  node_fs_promises_api.rs  node_fs_promises_write_append_contract.rs  node_fs_streams.rs  (+56 more)
crates/terracedb-simulation/: Cargo.toml
crates/terracedb-simulation/src/: hybrid.rs  lib.rs  pressure.rs
crates/terracedb-systemtest/: Cargo.toml  README.md
crates/terracedb-systemtest/src/: harness.rs  lib.rs
crates/terracedb-vfs/: Cargo.toml  README.md
crates/terracedb-vfs/examples/: embedded_overlay.rs
crates/terracedb-vfs/src/: activity.rs  error.rs  filesystem.rs  ids.rs  kv.rs  lib.rs  sdk.rs  store.rs  tables.rs  tool_runs.rs
crates/terracedb-vfs/tests/: artifact_roundtrip.rs  contracts.rs  filesystem_semantics.rs  generated.rs  lifecycle.rs  overlay_semantics.rs  sdk_examples.rs  simulation.rs
crates/terracedb-workflows/: Cargo.toml
crates/terracedb-workflows-core/: Cargo.toml
crates/terracedb-workflows-core/src/: lib.rs
crates/terracedb-workflows-core/tests/: contracts.rs
crates/terracedb-workflows-sandbox/: Cargo.toml
crates/terracedb-workflows-sandbox/src/: lib.rs
crates/terracedb-workflows-sandbox/tests/: contracts.rs
crates/terracedb-workflows/src/: failpoints.rs  lib.rs  run_model.rs  transition_engine.rs
crates/terracedb-workflows/tests/: runtime.rs  transition_engine.rs
examples/chat-rooms-api/: Cargo.toml  README.md
examples/chat-rooms-api/src/: app.rs  lib.rs  main.rs  model.rs
examples/chat-rooms-api/tests/: happy_path.rs  simulation.rs
examples/domains-api/: Cargo.toml  README.md
examples/domains-api/src/: app.rs  lib.rs  main.rs  model.rs
examples/domains-api/tests/: happy_path.rs  simulation.rs
examples/order-watch/: Cargo.toml  README.md  debug_compose.sh  docker-compose.yml
examples/order-watch/connect/: order-watch-postgres.json
examples/order-watch/src/: boundary.rs  lib.rs  (+2 more)
examples/retention-api/: Cargo.toml  README.md
examples/sandbox-notes/: Cargo.toml  README.md
examples/telemetry-api/: Cargo.toml  README.md
examples/todo-api/: Cargo.toml  README.md
examples/workflow-duet/: Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: commit_log_frame_decode.rs  debezium_primary_key_decode.rs  segment_footer_decode.rs
(+401 files in other folders)
