[package]
name = "terracedb"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
futures = "0.3.31"
getrandom = "0.4.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt", "sync", "time"] }

[dev-dependencies]
mad-turmoil = "0.2.1"
rand = "0.10"
turmoil = "0.7.1"
