[workspace]
members = [".", "crates/turmoil-determinism"]
resolver = "2"
[package]
name = "terracedb"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
bytes = "1.11.1"
crc32fast = "1.5.0"
futures = "0.3.31"
getrandom = "0.4.2"
object_store = { version = "0.13.2", default-features = false, features = ["fs"] }
parking_lot = "0.12.5"
rand = "0.10"
rand_chacha = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["io-util", "macros", "rt", "sync", "time"] }
turmoil = "0.7.1"
turmoil-determinism = { path = "crates/turmoil-determinism" }
uuid = "1.23.0"
walkdir = "2.5.0"
