[workspace]
members = [
    ".",
    "crates/terracedb-bricks",
    "crates/terracedb-http",
    "examples/retention-api",
    "examples/todo-api",
    "crates/terracedb-records",
    "crates/terracedb-relays",
    "crates/terracedb-simulation",
    "crates/terracedb-vfs",
    "crates/turmoil-determinism",
    "crates/terracedb-projections",
    "crates/terracedb-workflows",
    "crates/terracedb-otel",
]
resolver = "2"

[workspace.dependencies]
insta = "1.44.1"
proptest = "1.9.0"
rstest = "0.26.1"

[package]
name = "terracedb"
version = "0.1.0"
edition = "2024"

[features]
test-support = []

[dependencies]
async-trait = "0.1.89"
bytes = "1.11.1"
crc32fast = "1.5.0"
flatbuffers = "25.12.19"
futures = "0.3.31"
getrandom = "0.4.2"
lz4_flex = "0.11.5"
object_store = { version = "0.13.2", default-features = false, features = ["fs"] }
parking_lot = "0.12.5"
rand = "0.10"
rand_chacha = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["io-util", "macros", "rt", "sync", "time"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.32.0"
uuid = "1.23.0"
walkdir = "2.5.0"
opentelemetry = { version = "0.31.0", default-features = false, features = ["trace"] }
zstd = "0.13.3"

[dev-dependencies]
insta = { workspace = true }
proptest = { workspace = true }
rstest = { workspace = true }
terracedb-otel = { path = "crates/terracedb-otel" }
terracedb-simulation = { path = "crates/terracedb-simulation" }
terracedb-projections = { path = "crates/terracedb-projections" }
terracedb-workflows = { path = "crates/terracedb-workflows" }
turmoil = "0.7.1"
turmoil-determinism = { path = "crates/turmoil-determinism" }
