[package]
name = "terracedb-fuzz-targets"
version = "0.0.0"
publish = false
edition = "2024"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
terracedb = { path = ".." }
terracedb-debezium = { path = "../crates/terracedb-debezium" }

[[bin]]
name = "commit_log_frame_decode"
path = "fuzz_targets/commit_log_frame_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "segment_footer_decode"
path = "fuzz_targets/segment_footer_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "debezium_primary_key_decode"
path = "fuzz_targets/debezium_primary_key_decode.rs"
test = false
doc = false
bench = false
