[package]
name = "terracedb-bricks"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
bytes = "1.11.1"
futures = "0.3.31"
object_store = { version = "0.13.2", default-features = false, features = ["fs"] }
parking_lot = "0.12.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
terracedb = { path = "../.." }
terracedb-projections = { path = "../terracedb-projections" }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["sync"] }

[dev-dependencies]
terracedb-simulation = { path = "../terracedb-simulation" }
tokio = { version = "1.48.0", features = ["macros", "rt", "sync", "time"] }
turmoil = "0.7.1"
