[package]
name = "terracedb-capabilities"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
terracedb = { path = "../.." }
thiserror = "2.0.17"

[dev-dependencies]
terracedb-mcp = { path = "../terracedb-mcp" }
terracedb-migrate = { path = "../terracedb-migrate" }
terracedb-procedures = { path = "../terracedb-procedures" }
terracedb-simulation = { path = "../terracedb-simulation" }
tokio = { version = "1.48.0", features = ["rt"] }
turmoil = "0.7.1"
