[package]
name = "terracedb-debezium"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
terracedb = { path = "../.." }
terracedb-kafka = { path = "../terracedb-kafka" }
terracedb-projections = { path = "../terracedb-projections" }
terracedb-workflows = { path = "../terracedb-workflows" }
thiserror = "2.0.17"

[dev-dependencies]
async-trait = "0.1.89"
futures = "0.3.31"
terracedb = { path = "../..", features = ["test-support"] }
terracedb-kafka = { path = "../terracedb-kafka" }
terracedb-projections = { path = "../terracedb-projections" }
terracedb-simulation = { path = "../terracedb-simulation" }
terracedb-workflows = { path = "../terracedb-workflows" }
tokio = { version = "1.48.0", features = ["macros", "rt", "sync", "time"] }
turmoil = "0.7.1"
