[package]
name = "terracedb-fuzz"
version = "0.1.0"
edition = "2024"
readme = "README.md"

[dependencies]
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
terracedb = { path = "../.." }
terracedb-simulation = { path = "../terracedb-simulation" }
terracedb-vfs = { path = "../terracedb-vfs" }
thiserror = "2.0.17"
turmoil = "0.7.1"
