[package]
name = "terracedb-git-github"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
terracedb-git = { path = "../terracedb-git" }
url = "2.5.7"

[dev-dependencies]
axum = "0.8.8"
terracedb-git = { path = "../terracedb-git" }
terracedb-vfs = { path = "../terracedb-vfs" }
tokio = { version = "1.48.0", features = ["macros", "net", "rt", "sync"] }
