[package]
name = "terracedb-git"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha1 = "0.10.6"
sha2 = "0.10.9"
terracedb-vfs = { path = "../terracedb-vfs" }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["sync"] }

[dev-dependencies]
terracedb = { path = "../.." }
terracedb-fuzz = { path = "../terracedb-fuzz" }
terracedb-simulation = { path = "../terracedb-simulation" }
tokio = { version = "1.48.0", features = ["macros", "rt", "sync"] }
turmoil = "0.7.1"
