[package]
name = "terracedb-http"
version = "0.1.0"
edition = "2024"

[features]
default = []
axum = ["dep:axum", "dep:tower"]

[dependencies]
axum = { version = "0.8.8", optional = true }
bytes = "1.11.1"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["client", "http1", "server"] }
hyper-util = { version = "0.1.20", features = ["tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
terracedb-simulation = { path = "../terracedb-simulation" }
tokio = { version = "1.50.0", features = ["net", "rt", "sync", "time"] }
tower = { version = "0.5.3", features = ["util"], optional = true }
turmoil = "0.7.1"

[dev-dependencies]
axum = "0.8.8"
tokio = { version = "1.50.0", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
