[package]
name = "terracedb-js"
version = "0.1.0"
edition = "2024"
readme = "README.md"

[dependencies]
async-trait = "0.1.89"
boa_ast = { git = "https://github.com/boa-dev/boa", rev = "8a3ca7d0978ffadf165989ad0a9a93a6cafd61b4" }
boa_gc = { git = "https://github.com/boa-dev/boa", rev = "8a3ca7d0978ffadf165989ad0a9a93a6cafd61b4" }
boa_engine = { git = "https://github.com/boa-dev/boa", rev = "8a3ca7d0978ffadf165989ad0a9a93a6cafd61b4" }
boa_interner = { git = "https://github.com/boa-dev/boa", rev = "8a3ca7d0978ffadf165989ad0a9a93a6cafd61b4" }
boa_parser = { git = "https://github.com/boa-dev/boa", rev = "8a3ca7d0978ffadf165989ad0a9a93a6cafd61b4" }
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
terracedb-vfs = { path = "../terracedb-vfs" }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["sync"] }

[dev-dependencies]
terracedb = { path = "../.." }
terracedb-git = { path = "../terracedb-git" }
tokio = { version = "1.48.0", features = ["macros", "rt", "sync"] }
