[package]
name = "terracedb-js"
version = "0.1.0"
edition = "2024"
readme = "README.md"

[dependencies]
async-trait = "0.1.89"
boa_ast = { git = "https://github.com/boa-dev/boa", rev = "f5e88de558e038f0ae675a012d59917a098f44b6" }
boa_gc = { path = "src/boa/core/gc" }
boa_engine = { path = "src/boa/core/engine", features = ["annex-b"] }
boa_interner = { git = "https://github.com/boa-dev/boa", rev = "f5e88de558e038f0ae675a012d59917a098f44b6" }
boa_parser = { git = "https://github.com/boa-dev/boa", rev = "f5e88de558e038f0ae675a012d59917a098f44b6" }
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
terracedb-vfs = { path = "../terracedb-vfs" }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["sync"] }

[dev-dependencies]
terracedb = { path = "../.." }
terracedb-git = { path = "../terracedb-git" }
tokio = { version = "1.48.0", features = ["macros", "rt", "sync"] }
