[package]
name = "terracedb-kafka"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
terracedb = { path = "../.." }
thiserror = "2.0.17"

[dev-dependencies]
async-trait = "0.1.89"
futures = "0.3.31"
terracedb = { path = "../..", features = ["test-support"] }
terracedb-simulation = { path = "../terracedb-simulation" }
turmoil = "0.7.1"
