[package]
name = "terracedb-otel"
version = "0.1.0"
edition = "2024"

[dependencies]
opentelemetry = { version = "0.31.0", default-features = false, features = ["trace", "metrics", "logs"] }
opentelemetry-otlp = { version = "0.31.0", default-features = false, features = ["trace", "metrics", "logs", "grpc-tonic", "http-proto", "reqwest-client"] }
opentelemetry_sdk = { version = "0.31.0", default-features = false, features = ["trace", "metrics", "logs", "testing", "experimental_trace_batch_span_processor_with_async_runtime", "experimental_logs_batch_log_processor_with_async_runtime"] }
parking_lot = "0.12.5"
terracedb = { path = "../..", features = ["test-support"] }
terracedb-projections = { path = "../terracedb-projections" }
terracedb-workflows = { path = "../terracedb-workflows" }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
tonic = "0.14.1"
tracing = "0.1.41"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3.19", features = ["registry", "std"] }

[dev-dependencies]
async-trait = "0.1.89"
futures = "0.3.31"
insta = { workspace = true }
