[package]
name = "terracedb-projections"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
futures = "0.3.31"
terracedb = { path = "../.." }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt", "sync"] }

[dev-dependencies]
terracedb = { path = "../..", features = ["test-support"] }
tokio = { version = "1.48.0", features = ["macros", "rt", "sync", "time"] }
turmoil = "0.7.1"
