[package]
name = "terracedb-records"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
serde = "1.0.228"
serde_json = "1.0.145"
terracedb = { path = "../.." }
thiserror = "2.0.17"

[dev-dependencies]
terracedb = { path = "../..", features = ["test-support"] }
tokio = { version = "1.48.0", features = ["macros", "rt", "sync"] }
