[package]
name = "terracedb-sandbox"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
boa_engine = "0.21.1"
crc32fast = "1.5.0"
futures = "0.3.31"
include_dir = "0.7.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
terracedb = { path = "../.." }
terracedb-capabilities = { path = "../terracedb-capabilities" }
terracedb-git = { path = "../terracedb-git" }
terracedb-js = { path = "../terracedb-js" }
terracedb-vfs = { path = "../terracedb-vfs" }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt", "sync"] }
tracing = "0.1.41"
uuid = { version = "1.23.0", features = ["v4"] }

[dev-dependencies]
axum = "0.8.8"
base64 = "0.22.1"
terracedb-git-github = { path = "../terracedb-git-github" }
tokio = { version = "1.48.0", features = ["macros", "net", "rt", "sync"] }
terracedb-simulation = { path = "../terracedb-simulation" }
turmoil = "0.7.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
