[package]
name = "terracedb-sandbox"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
boa_ast = { git = "https://github.com/boa-dev/boa", rev = "f5e88de558e038f0ae675a012d59917a098f44b6" }
boa_engine = { git = "https://github.com/boa-dev/boa", rev = "f5e88de558e038f0ae675a012d59917a098f44b6" }
boa_gc = { git = "https://github.com/boa-dev/boa", rev = "f5e88de558e038f0ae675a012d59917a098f44b6" }
boa_interner = { git = "https://github.com/boa-dev/boa", rev = "f5e88de558e038f0ae675a012d59917a098f44b6" }
boa_parser = { git = "https://github.com/boa-dev/boa", rev = "f5e88de558e038f0ae675a012d59917a098f44b6" }
brotli = "8.0.2"
crc32fast = "1.5.0"
flate2 = { version = "1.1.5", features = ["zlib-rs"] }
futures = "0.3.31"
hex = "0.4.3"
hmac = "0.12.1"
hkdf = "0.12.4"
include_dir = "0.7.4"
md-5 = "0.10.6"
pbkdf2 = "0.12.2"
regex = "1.12.2"
urlpattern = "0.6.0"
ripemd = "0.1.3"
scrypt = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha1 = "0.10.6"
sha2 = "0.10.9"
sha3 = "0.10.8"
terracedb = { path = "../.." }
terracedb-capabilities = { path = "../terracedb-capabilities" }
terracedb-git = { path = "../terracedb-git" }
terracedb-js = { path = "../terracedb-js" }
terracedb-vfs = { path = "../terracedb-vfs" }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt", "sync"] }
tracing = "0.1.41"
url = "2.5.7"
uuid = { version = "1.23.0", features = ["v4"] }
zstd = "0.13.3"

[dev-dependencies]
axum = "0.8.8"
terracedb-git-github = { path = "../terracedb-git-github" }
tokio = { version = "1.48.0", features = ["macros", "net", "rt", "sync"] }
terracedb-simulation = { path = "../terracedb-simulation" }
turmoil = "0.7.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
