[package]
name = "terracedb-systemtest"
version = "0.1.0"
edition = "2024"
readme = "README.md"

[dependencies]
async-trait = "0.1.89"
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
terracedb-fuzz = { path = "../terracedb-fuzz" }
terracedb-http = { path = "../terracedb-http", features = ["axum"] }
terracedb-simulation = { path = "../terracedb-simulation" }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt", "sync", "time"] }
