[package]
name = "terracedb-vfs"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
terracedb = { path = "../.." }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt", "sync"] }
terracedb-simulation = { path = "../terracedb-simulation" }
turmoil = "0.7.1"
