[package]
name = "terracedb-workflows-sandbox"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
terracedb-sandbox = { path = "../terracedb-sandbox" }
terracedb-workflows-core = { path = "../terracedb-workflows-core" }
tokio = { version = "1.48.0", features = ["rt"] }

[dev-dependencies]
terracedb = { path = "../..", features = ["test-support"] }
terracedb-vfs = { path = "../terracedb-vfs" }
tokio = { version = "1.48.0", features = ["macros", "rt"] }
