[package]
name = "terracedb-example-domains-api"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = "0.8.8"
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.50.0", features = ["macros", "net", "rt-multi-thread"] }
terracedb = { path = "../.." }
terracedb-records = { path = "../../crates/terracedb-records" }

[dev-dependencies]
tempfile = "3.23.0"
terracedb-simulation = { path = "../../crates/terracedb-simulation" }
tokio = { version = "1.50.0", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
turmoil = "0.7.1"
