[package]
name = "terracedb-example-order-watch"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
terracedb = { path = "../.." }
terracedb-debezium = { path = "../../crates/terracedb-debezium" }
terracedb-kafka = { path = "../../crates/terracedb-kafka" }
terracedb-projections = { path = "../../crates/terracedb-projections" }
terracedb-records = { path = "../../crates/terracedb-records" }
terracedb-workflows = { path = "../../crates/terracedb-workflows" }

[dev-dependencies]
async-trait = "0.1.89"
futures = "0.3.31"
terracedb-simulation = { path = "../../crates/terracedb-simulation" }
tokio = { version = "1.50.0", features = ["macros", "rt", "sync", "time"] }
turmoil = "0.7.1"
