[package]
name = "terracedb-example-sandbox-notes"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "sync"] }
terracedb = { path = "../.." }
terracedb-sandbox = { path = "../../crates/terracedb-sandbox" }
terracedb-vfs = { path = "../../crates/terracedb-vfs" }

[dev-dependencies]
terracedb-simulation = { path = "../../crates/terracedb-simulation" }
turmoil = "0.7.1"

