[package]
name = "terracedb-example-todo-api"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
async-trait = "0.1.89"
axum = "0.8.8"
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.50.0", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
terracedb = { path = "../.." }
terracedb-projections = { path = "../../crates/terracedb-projections" }
terracedb-relays = { path = "../../crates/terracedb-relays" }
terracedb-workflows = { path = "../../crates/terracedb-workflows" }

[dev-dependencies]
bytes = "1.11.1"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["client", "http1", "server"] }
hyper-util = { version = "0.1.20", features = ["tokio"] }
terracedb-simulation = { path = "../../crates/terracedb-simulation" }
tokio = { version = "1.50.0", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tower = { version = "0.5.3", features = ["util"] }
turmoil = "0.7.1"
