[package]
name = "terracedb-example-todo-api"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
async-trait = "0.1.89"
axum = "0.8.8"
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.50.0", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
terracedb = { path = "../.." }
terracedb-projections = { path = "../../crates/terracedb-projections" }
terracedb-records = { path = "../../crates/terracedb-records" }
terracedb-relays = { path = "../../crates/terracedb-relays" }
terracedb-workflows = { path = "../../crates/terracedb-workflows" }

[dev-dependencies]
terracedb-fuzz = { path = "../../crates/terracedb-fuzz" }
terracedb-http = { path = "../../crates/terracedb-http", features = ["axum"] }
terracedb-simulation = { path = "../../crates/terracedb-simulation" }
tokio = { version = "1.50.0", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
turmoil = "0.7.1"
